통합 설정 시스템 구현 및 의존성 해결 / Implement Unified Settings and Fix Dependencies
1. src/eternalweb/config.py: JSON 기반 전역 설정 관리자 구현 (자동 생성 기능 포함)
2. src/eternalweb/gui/app.py: GUI 내 '설정' 탭에 실시간 JSON 편집기 구현
3. requirements.txt: ArchiveBox 실행에 필요한 대량의 의존성 라이선스 해결 (python-benedict, daphne 등)
4. src/eternalweb/engine/engine.py: 설정된 저장 경로 시스템 연동

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,18 @@ dateparser
 w3lib
 yt-dlp
 gallery-dl
+python-benedict
+django-extensions
+django-signal-webhooks
+django-stubs
+django-stubs-ext
+tzdata
+humanize
+base32-crockford
+atomicwrites
+python-magic
+daphne
+channels
+django-ninja
+django-extensions
+django-signal-webhooks
