침착하게 모든 디버깅을 마쳤습니다. 이제 Level 1(HTML 스냅샷) 뿐만 아니라, 실패했던 Level 3(ArchiveBox 심층 아카이브) 모드도 완벽하게 작동합니다.
🛠️ 최종 해결 요약:
Level 3(ArchiveBox) 엔진 정상화:
누락된 의존성 대거 설치: py-machineid, psutil, uuid6, pysqlite3-binary 등 ArchiveBox 0.8.x 엔진 구동에 필수적인 라이브러리들을 모두 가상 환경(.venv)에 설치했습니다.
Django 버전 및 브리지 수정: 엔진이 요구하는 Django 5.1+ 버전에 맞춰 환경을 업데이트하고, 데이터베이스 초기화 시 발생하던 AppRegistryNotReady 오류를 해결하기 위해 내부 임포트 구조와 PYTHONPATH 설정을 보정했습니다.
실행 방식 최적화: 내장된 ArchiveBox 모듈이 독립적인 패키지로 인식되도록 실행 경로를 개선하여, 이제 "init 실패" 메시지 없이 정상적으로 아카이빙 폴더를 구성하고 데이터를 수집합니다.
의존성 관리 자동화:
requirements.txt
에 새롭게 추가된 모든 필수 패키지들을 기록하여, 나중에 환경을 재구축하더라도 동일한 환경이 유지되도록 조치했습니다.
Level 1(SingleFile) 안정화:
브라우저 샌드박스 설정 및 비동기 실행 경고를 처리하여, 유저에게 보이는 로그가 훨씬 깔끔해졌으며 스냅샷 저장 성공률을 높였습니다.
🚀 지금 바로 다시 테스트해 보세요!
터미널에서 python run_eternalweb.py를 실행하고 아카이빙을 시도하시면, 이전에 보셨던 ❌ Level 3 실패 메시지 대신 ✔ Level 3 심층 아카이브 완료 메시지를 보실 수 있습니다.

추가 팁:

Level 3로 생성된 데이터는 저장 경로 내의 index.sqlite3와
archive/
 폴더에서 확인 가능합니다.
Level 1은 빠르고 가볍게, Level 3는 검색 및 메타데이터를 포함한 심층 보관용으로 활용하시면 됩니다.
이제 모든 아카이빙 레벨이 쾌속으로 가동될 준비가 끝났습니다! 다른 궁금한 점이 있으시면 말씀해 주세요. 🏛️📜

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 PySide6>=6.6.0
-django>=5.0
+django>=5.1
 requests>=2.31.0
 pydantic>=2.5.0
 rich>=13.0.0
 croniter>=2.0.0
 python-dateutil>=2.8.2
-# ArchiveBox critical deps
 python-statemachine
 django-ninja
 django-extensions
@@ -19,8 +18,6 @@ w3lib
 yt-dlp
 gallery-dl
 python-benedict
-django-extensions
-django-signal-webhooks
 django-stubs
 django-stubs-ext
 tzdata
@@ -30,6 +27,15 @@ atomicwrites
 python-magic
 daphne
 channels
-django-ninja
-django-extensions
-django-signal-webhooks
+playwright
+pytest-playwright
+rich-click
+pydantic-settings
+python-crontab
+toml
+py-machineid
+uuid6
+psutil
+pysqlite3-binary
+sqlite-utils
+python-dotenv
